Fix extra margin on iOS search

--- a/components/byu-search/byu-search.sass
+++ b/components/byu-search/byu-search.sass
@@ -10,6 +10,7 @@
   font-size: 1rem
   box-sizing: border-box
   border-radius: 0
+  margin-bottom: 0
 
   @media(max-width: $breakMdLg)
     width: 100%
